feat: add modern FAQ view with i18n and footer integration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -481,6 +481,44 @@
       "privacy": "Privacy Policy"
     }
   },
+  "faq": {
+    "title": "Frequently Asked Questions",
+    "subtitle": "Find quick answers to the most common questions about RentUs",
+    "cta": {
+      "text": "Didn't find your answer?",
+      "button": "Talk to support"
+    },
+    "empty": {
+      "title": "No questions available",
+      "description": "We are working to add content here soon."
+    },
+    "questions": {
+      "q1": {
+        "question": "How can I publish my property on RentUs?",
+        "answer": "It's very simple. Register as an owner, go to your dashboard, and select 'Publish Property'. Complete the basic data, upload high-quality photos, and you're done! Our team will review the information to activate it."
+      },
+      "q2": {
+        "question": "What payment methods can I use?",
+        "answer": "We accept credit and debit cards (Visa, Mastercard, American Express). You can also link your bank account for automatic recurring payments through our secure platform."
+      },
+      "q3": {
+        "question": "How do digital contracts work?",
+        "answer": "All our contracts are legally binding and signed electronically. Once both parties accept the terms, the system generates a certified PDF that you can download at any time from your 'Contracts' section."
+      },
+      "q4": {
+        "question": "How do I report a technical problem in the property?",
+        "answer": "If you are a tenant, go to the 'Maintenance' section in your user menu. There you can create a detailed report with photos, which will go directly to the owner or administrator for management."
+      },
+      "q5": {
+        "question": "Is it safe to share my personal data?",
+        "answer": "Absolutely. At RentUs, we use bank-grade encryption (SSL) to protect all your sensitive information. We never share your data with third parties without your explicit consent."
+      },
+      "q6": {
+        "question": "Can I cancel my contract early?",
+        "answer": "Early cancellation depends on the specific clauses agreed upon in your digital contract. We recommend reviewing the 'Termination' section in your current contract or contacting the owner directly."
+      }
+    }
+  },
   "properties": {
     "hero": {
       "title": {
